// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Main Component should match snapshot 1`] = `
<div>
  <EditableHtml
    className="response-area-editor"
    highlightShape={true}
    markup="hi"
    maxHeight="40vh"
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "math": Object {
          "controlledKeypadMode": false,
          "customKeys": undefined,
          "disabled": true,
          "keypadMode": undefined,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</div>
`;

exports[`Render Main Component should match snapshot with teacher instructions 1`] = `
<div>
  <div>
    <WithStyles(Collapsible)
      labels={
        Object {
          "hidden": "Show Teacher Instructions",
          "visible": "Hide Teacher Instructions",
        }
      }
    >
      <WithStyles(PreviewPrompt)
        defaultClassName="teacher-instructions"
        prompt="Teacher Instructions"
      />
    </WithStyles(Collapsible)>
    <br />
  </div>
  <EditableHtml
    className="response-area-editor"
    highlightShape={true}
    markup="hi"
    maxHeight="40vh"
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "math": Object {
          "controlledKeypadMode": false,
          "customKeys": undefined,
          "disabled": true,
          "keypadMode": undefined,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</div>
`;
